Removed dependency on 'org.apache.commons.*'  (#7989)
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>